@@ -880,6 +880,9 @@
 #define STRING_TDB2_DIRTY_EXIT       "Beende mit ungeschriebenen Änderungen auf {1}"
 #define STRING_TDB2_UNWAIT           "Un-waiting task '{1}'"
 
+// recur.cpp
+#define STRING_RECUR_CREATE          "Creating recurring task instance '{1}'"
+
 // View
 #define STRING_VIEW_TOO_SMALL        "Dieser Report hat eine Mindestbreite von {1} und passt nicht in die Bildschirmbreite von {2}."
 
