@@ -880,6 +880,9 @@
 #define STRING_TDB2_DIRTY_EXIT       "Saindo com modificações por gravar de {1}"
 #define STRING_TDB2_UNWAIT           "Un-waiting task '{1}'"
 
+// recur.cpp
+#define STRING_RECUR_CREATE          "Creating recurring task instance '{1}'"
+
 // View
 #define STRING_VIEW_TOO_SMALL        "O relatório tem uma largura mínima de {1} e não cabe na largura disponível {2}."
 
